--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
+  "version": 2,
   "builds": [
-    { "src": "realworld-portal/package.json", "use": "@vercel/next" }
+    {
+      "src": "realworld-portal/next.config.ts",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/realworld-portal/$1"
+    }
   ]
 }
